测试修改commit内容

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	</style>
 </head>
 <body>
+	<p>修改了一些小bug</p>
 	<script src="js/map.js"></script>
 	<script src="js/block.js"></script>
 	<script src="js/food.js"></script>
